[project]
name = ""
version = ""
description = "Simple HelloWorld service"
authors = [
    {name = "Petr Chatrný", email = "p.chatrny@protonmail.com"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn>=0.23.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"
test = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
]